@@ -178,7 +178,7 @@ public:
     void SetNormalBitmap(const wxBitmap& bmp) { m_bmpNormal = bmp; }
     void SetDisabledBitmap(const wxBitmap& bmp) { m_bmpDisabled = bmp; }
 
-    void SetLabel(const wxString& label) { m_label = label; }
+    virtual void SetLabel(const wxString& label) { m_label = label; }
 
     void SetClientData(wxObject *clientData)
     {
