@@ -111,9 +111,10 @@ Unix (Base/GUI):
 
 All (GUI):
 
+- implemented radio menu items and radio toolbar buttons
+- added possibility to show text in the toolbar buttons
 - added wxArtProvider class that can be used to customize the look of standard
   wxWindows dialogs
-- implemented radio menu items
 - significantly improved native font support
 - wxImage::ComputeHistogram() now uses wxImageHistogram instead of type-unsafe
   wxHashTable
